--- a/src/app/componentes/mat-dialog/mat-dialog.component.html
+++ b/src/app/componentes/mat-dialog/mat-dialog.component.html
@@ -6,5 +6,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button mat-dialog-close (click)="onNoClicked()">No</button>
-  <button mat-button mat-dialog-close (click)="onYesClicked()"cdkFocusInitial>Ok</button>
+  <button mat-button mat-dialog-close (click)="onYesClicked()"cdkFocusInitial>Sí</button>
 </div>
