--- a/src/app/componentes/plato/plato.component.scss
+++ b/src/app/componentes/plato/plato.component.scss
@@ -124,7 +124,15 @@ mat-tab-group{
   flex: 1 1 auto;
 } */
 
-
+/* SPINNER */
+mat-progress-spinner{
+  position:absolute;
+  top: 50%;
+  left: 50%;
+  right: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 5;
+}
 
 
 
