--- a/src/app/componentes/reserva/reserva.component.scss
+++ b/src/app/componentes/reserva/reserva.component.scss
@@ -31,4 +31,14 @@ button{
   width: 18%;
 }
 
+/* SPINNER */
+mat-progress-spinner{
+  position:absolute;
+  top: 50%;
+  left: 50%;
+  right: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 5;
+}
+
 
