eliminar scroll horizontal

--- a/src/app/componentes/plato/plato.component.html
+++ b/src/app/componentes/plato/plato.component.html
@@ -11,7 +11,7 @@
       </div>
     </div>
 
-      <mat-tab-group mat-align-tabs="start">
+      <mat-tab-group dynamicHeight mat-align-tabs="start">
 
 
 
