--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
         <div *ngIf="usuario[0].rol.nombreRol == 'administrador'">
           <a class="nav-link" routerLink="/crear-plato">
             <mat-list-option>
-              Crear platos
+              Crear plato
             </mat-list-option>
           </a>
         </div>
