--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar>
   <!-- NOMBRE APP & ICONO -->
   <div class="header-style">
-    <span class="app-style" routerLink="/inicio">Comedor App</span>
+    <span class="app-style" routerLink="/inicio">Unstuck overfood</span>
     <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
       <mat-icon>restaurant</mat-icon>
     </button>
