--- a/src/app/componentes/plato/plato.component.html
+++ b/src/app/componentes/plato/plato.component.html
@@ -97,7 +97,7 @@
               <mat-card-header class="bg-card">
                 <div mat-card-avatar class="example-header-image"></div>
                 <mat-card-title>{{plato?.nombrePlato}}</mat-card-title>
-                <mat-card-subtitle>{{plato?.precioPlato + '€'}}</mat-card-subtitle>
+                <mat-card-subtitle>{{plato?.precioPlato | currency:'EUR'}}</mat-card-subtitle>
               </mat-card-header>
               <img mat-card-image role="img" src="{{'data:image/jpg;base64,' + plato.imagenPlato}}" />
               <mat-card-content class="bg-card">
@@ -176,7 +176,7 @@
               </mat-card-content>
               <mat-card-actions class="buttons-center">
                 <ng-container *ngIf="usuarioLogeado$ | async as usuario">
-                  <ng-container *ngIf="usuario[0].rol.nombreRol == 'administrador'">
+                <!--   <ng-container *ngIf="usuario[0].rol.nombreRol == 'administrador'"> -->
                     <button (click)="modificarPlato(plato.idPlato)" mat-icon-button matTooltip="Modificar">
                       <mat-icon>edit</mat-icon>
                     </button>
@@ -185,7 +185,7 @@
                       <mat-icon color="">delete</mat-icon>
                     </button>
                   </ng-container>
-                </ng-container>
+               <!--  </ng-container> -->
               </mat-card-actions>
             </mat-card>
           </div>
